[gd_scene load_steps=7 format=2]

[ext_resource path="res://menue.gd" type="Script" id=1]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/ui/redbutton/redbutton1.png" type="Texture" id=3]
[ext_resource path="res://sound/music/menu.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/ui/click1.ogg" type="AudioStream" id=5]
[ext_resource path="res://sprites/land/to the surface game.png" type="Texture" id=6]

[node name="menue" type="Node2D"]
script = ExtResource( 1 )

[node name="title" type="Node2D" parent="."]

[node name="title" type="Label" parent="title"]
margin_left = -171.543
margin_top = -1.68179
margin_right = -3.54288
margin_bottom = 97.3182
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TO THE
SURFACE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="begin" type="Node2D" parent="."]

[node name="Button" type="Button" parent="begin"]
margin_left = -206.0
margin_top = 290.0
margin_right = -4.0
margin_bottom = 341.0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="begin"]
z_index = 1

[node name="Label" type="Label" parent="begin/Node2D"]
margin_left = -162.098
margin_top = 165.276
margin_right = -50.0978
margin_bottom = 213.276
custom_fonts/font = ExtResource( 2 )
text = "BEGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Node2D" parent="."]

[node name="button2" type="Button" parent="quit"]
margin_left = -205.565
margin_top = 162.85
margin_right = -3.56529
margin_bottom = 213.85
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="quit"]

[node name="Label" type="Label" parent="quit/Node2D"]
margin_left = -151.503
margin_top = 289.233
margin_right = -63.5032
margin_bottom = 337.233
custom_fonts/font = ExtResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514.052, 300.254 )
scale = Vector2( 1.00908, 0.591634 )
z_index = -4
texture = ExtResource( 6 )

[node name="kenny jam" type="Node2D" parent="."]

[node name="kenny jam" type="Label" parent="kenny jam"]
margin_left = 1100.07
margin_top = 525.43
margin_right = 1300.07
margin_bottom = 573.43
custom_fonts/font = ExtResource( 2 )
text = "KENNY JAM"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="begin/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="begin/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="begin/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="quit/button2" to="." method="_on_button2_mouse_entered"]
[connection signal="mouse_exited" from="quit/button2" to="." method="_on_button2_mouse_exited"]
[connection signal="pressed" from="quit/button2" to="." method="_on_button2_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
